jquery integrated globally

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <div id="app-hook"></div>
+  <script src="static/js/jquery.slim.min.js"></script>
   <script src="static/js/bundle.js"></script>
   <script src="app/driver.js"></script>
 </body>
